[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fablake"
version = "0.1.0"
description = "Data engineering helpers for PySpark workloads."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Alexi"}]
keywords = ["pyspark", "data-quality", "data-engineering"]
dependencies = [
    "pyspark>=3.3,<4",
]

[project.urls]
Homepage = "https://github.com/alexi/fablake"
Source = "https://github.com/alexi/fablake"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyspark>=3.3,<4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fablake.spark.data_quality" = ["dict_mapping.json"]
